--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiogram = "*"
+aiogram = "~=2.14"
+environs = "~=8.0.0"
+requests = "2.28.2"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.9"
